---
title: Database ERD
owner: "@yhia"
status: draft
last_verified: 2026-06-10
diataxis_mode: reference
audience: engineering
codegen_source: api/db/schema.ts
---

# Database ERD (Mermaid)

> **Stub.** This file is generated by `scripts/codegen/drizzle-erd.ts` from `api/db/schema.ts`. Until that script is written, render the schema in [drizzle-kit studio](https://orm.drizzle.team/drizzle-studio/overview) or read [`api/db/schema.ts`](../../../api/db/schema.ts) directly.

## Planned output

```mermaid
erDiagram
  prospects ||--o{ listings : has
  prospects ||--o{ listing_analyses : has
  listings ||--o{ listing_analyses : scored_by
  prospects {
    serial id PK
    text slug UK
    text email
    text status
  }
  listings {
    serial id PK
    int prospect_id FK
    text asin
    text marketplace
  }
  listing_analyses {
    serial id PK
    int listing_id FK
    int prospect_id FK
    int overall_score
    int rufus_score
    int cosmo_score
  }
```

The above is a hand-drawn preview to confirm the shape. Replace it with the codegen output once `scripts/codegen/drizzle-erd.ts` is written.

## Related

- [Schema reference](schema.md) — table-level documentation
- [00-meta/codegen-pipeline.md](../../00-meta/codegen-pipeline.md) — codegen contract
